@@ -46,6 +46,49 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit5 -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>2.0-groovy-2.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-spock</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -57,6 +100,12 @@
                 <configuration>
                     <source>16</source>
                     <target>16</target>
+                    <testCompilerArguments>
+                            --add-reads graph.designer.drawing.pane=java.desktop
+                            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                            --add-opens graph.designer.drawing.pane/fr.leward.graphdesigner.ui.drawingpane=ALL-UNNAMED
+                            --add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+                    </testCompilerArguments>
                 </configuration>
             </plugin>
             <plugin>
@@ -69,36 +118,16 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>ru.suzume.snakefx/ru.suzume.snakefx.Main</mainClass>
-                                                        <launcher>app</launcher>
-                                                        <jlinkZipName>app</jlinkZipName>
-                                                        <jlinkImageName>app</jlinkImageName>
-                                                        <noManPages>true</noManPages>
-                                                        <stripDebug>true</stripDebug>
-                                                        <noHeaderFiles>true</noHeaderFiles>
+                            <launcher>app</launcher>
+                            <jlinkZipName>app</jlinkZipName>
+                            <jlinkImageName>app</jlinkImageName>
+                            <noManPages>true</noManPages>
+                            <stripDebug>true</stripDebug>
+                            <noHeaderFiles>true</noHeaderFiles>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
-<!--                            <groupId>org.apache.maven.plugins</groupId>-->
-<!--                            <artifactId>maven-shade-plugin</artifactId>-->
-<!--                            <executions>-->
-<!--                                <execution>-->
-<!--                                    <goals>-->
-<!--                                        <goal>shade</goal>-->
-<!--                                    </goals>-->
-<!--                                    <configuration>-->
-<!--                                        <shadedArtifactAttached>true</shadedArtifactAttached>-->
-<!--                                        <transformers>-->
-<!--                                            <transformer implementation=-->
-<!--                                                                 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-<!--                                                <mainClass>Your_main_class_here</mainClass>-->
-<!--                                            </transformer>-->
-<!--                                        </transformers>-->
-<!--                                    </configuration>-->
-<!--                                </execution>-->
-<!--                            </executions>-->
-<!--                        </plugin>-->
         </plugins>
     </build>
 </project>
